# ChangeLog for Gentoo Linux Installer
# Copyright 2005 Gentoo Technologies, Inc.

gli-dialog (5 Jul 2005):

  6 Sep 2005; Preston Cody <codeman@gentoo.org>
  coded make.conf advanced menus.

  4 Sep 2005; Preston Cody <codeman@gentoo.org>
  stupid fix for non-defined etc_files.  additional fix from agaffney
  
  3 Sep 2005; Preston Cody <codeman@gentoo.org>
  fixed make.conf for etc_files and hopefully fixed up etc_portage code.
  does not use cdata() yet.
  
  31 Jul 2005; Preston Cody <codeman@gentoo.org>
  fix stupid mistake in show_settings.
  fix another stupid mistake for grp_install.
  
  26 Jul 2005; Preston Cody <codeman@gentoo.org>
  Changed IP init procedure. fix has_key bug w/ make.conf
  remove enemy-territory from extra_packages b/c it has a licence issue.
  added show_settings.
  changed rc.conf list_heights 'cause they keep crashing dialog.py for no reason
  
  24 Jul 2005; Preston Cody <codeman@gentoo.org>
  changed stable/unstable to advanced_mode only.
  
  23 Jul 2005; Preston Cody <codeman@gentoo.org>
  fixed extra-packages and groups prechecking.
  
  22 Jul 2005; Preston Cody <codeman@gentoo.org>
  fixed width of stage3.
  converting install_packages to a list instead of a string.
  
  21 Jul 2005; Preston Cody <codeman@gentoo.org>
  changed "Use Local" on portage and tarball selection to none for portage and
  stage3-on-the-fly for tarball selection.  lowercase fix on portage sync type.
  fixed some more widths. fixed USE list_heights.
  reordered IP functions to match menu.
  fix install_packages listing in main menu.
  
  7 Jul 2005; Preston Cody <codeman@gentoo.org>
  fixed more heights/widths. fixed missing use_local_desc in set_make_conf
  changed extrapackages to load from profile.
  added error checking to rc.conf. added disp_manager to rc.conf
  change client_networking to bypass if ping and local_install rather than 
  advanced_mode as before.

  5 Jul 2005; Preston Cody <codeman@gentoo.org>
  Starting detailed changelog for glid.