@@ -5,6 +5,7 @@ gli-dialog (5 Jul 2005):
 
   6 Sep 2005; Preston Cody <codeman@gentoo.org>
   coded make.conf advanced menus.
+  fixes on CFLAGS code.
 
   4 Sep 2005; Preston Cody <codeman@gentoo.org>
   stupid fix for non-defined etc_files.  additional fix from agaffney
